# mana_daily_spend

./: README.md  android.txt  buildozer.spec  main.py  mana_daily_spend.json
.buildozer/: state.db
manadailyspend/: LICENSE  README.rst  pyproject.toml
manadailyspend/src/manadailyspend/: __main__.py  app.py
manadailyspend/src/manadailyspend.dist-info/: METADATA
simplesurplus/: settings.gradle
simplesurplus/app/: build.gradle
simplesurplus/app/src/androidTest/java/com/simplesurplus/simplesurplus/: ExampleInstrumentedTest.kt
simplesurplus/app/src/main/: AndroidManifest.xml
simplesurplus/app/src/main/java/com/simplesurplus/simplesurplus/: MainActivity.kt
simplesurplus/app/src/main/res/values/: strings.xml
simplesurplus/app/src/test/java/com/simplesurplus/simplesurplus/: ExampleUnitTest.kt
simplesurplus/gradle/wrapper/: gradle-wrapper.properties
