[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Mana Daily Spend"
bundle = "com.example"
version = "0.0.1"
url = "https://manadailyspend.com"
license = "Proprietary"
author = 'Jordan Miller'
author_email = "jordan.kay@gmail.com"

[tool.briefcase.app.manadailyspend]
formal_name = "Mana Daily Spend"
description = "Simplest Budget Possible"
icon = "src/manadailyspend/resources/manadailyspend"
sources = ['src/manadailyspend']
requires = []


[tool.briefcase.app.manadailyspend.macOS]
requires = [
    'toga-cocoa>=0.3.0.dev18',
]

[tool.briefcase.app.manadailyspend.linux]
requires = [
    'toga-gtk>=0.3.0.dev18',
]

[tool.briefcase.app.manadailyspend.windows]
requires = [
    'toga-winforms>=0.3.0.dev18',
]

# Mobile deployments
[tool.briefcase.app.manadailyspend.iOS]
requires = [
    'toga-iOS>=0.3.0.dev18',
]

[tool.briefcase.app.manadailyspend.android]
requires = [
    'toga-android>=0.3.0.dev18',
]
